# detectron-vertex-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  README.rst  docker-compose.yml  pyproject.toml
model/configs/: defaults.yml
model/configs/COCO-Detection/: faster_rcnn_R_50_FPN_3x.yaml  retinanet_R_50_FPN_3x.yaml
model/configs/COCO-InstanceSegmentation/: mask_rcnn_R_50_FPN_3x.yaml
model/configs/COCO-Keypoints/: keypoint_rcnn_R_50_FPN_3x.yaml
model/configs/COCO-PanopticSegmentation/: panoptic_fpn_R_50_3x.yaml
model/pipeline/: capture_image.py  save_image_gcs.py
src/: config.py  gcs.py  inference.py  main.py  schema.py  utils.py
tests/: test_detectron_inference.py
