[tool.poetry]
name = "detectron-inference"
version = "0.1.0"
description = ""
authors = ["Edwin <ecaminero@entelocean.io>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
google-cloud-aiplatform = "^1.9.0"
flasgger = "^0.9.5"
apispec = {extras = ["yaml", "validation", "marshmallow"], version = "^5.1.1"}
apispec-webframeworks = "^0.5.2"
marshmallow = "^3.14.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = 'flask run'

